--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@ target/
 !.mvn/wrapper/maven-wrapper.jar
 !**/src/main/**/target/
 !**/src/test/**/target/
+*.class
 
 ### STS ###
 .apt_generated
@@ -14,6 +15,7 @@ target/
 .sts4-cache
 
 ### IntelliJ IDEA ###
+/out/
 .idea
 *.iws
 *.iml
